<resources>
    <string name="app_name">DevelopResponsity</string>
    <string name="delete">删除</string>
    <string name="text_default">default</string>
    <string name="more">更多</string>
    <string name="function_swiper">SwiperRevealLayout</string>
    <string name="function_image_tool">ImageCompress</string>
    <string name="function_audio_tool">audio</string>
    <string name="function_greendao_tool">greendao</string>
    <string name="function_drawer">抽屉菜单</string>
    <string name="video_start">开始</string>
    <string name="video_pause">暂停</string>
    <string name="video_stop">停止</string>

    <string name="video_prepare">准备下载</string>
    <string name="video_waitting">等待下载</string>
    <string name="video_downloading">正在下载</string>
    <string name="video_complete">下载完成</string>
    <string name="video_file_not_exist">下载文件丢失</string>
    <string name="video_error">下载出错</string>
    <string name="video_retry">失败重试</string>
    <string name="video_paused">下载暂停</string>
    <string name="video_unknown">发生未知错误</string>
    <string name="video_touch_exit">轻触退出</string>
    <string name="video_touch_send">轻触发送</string>
    <string name="video_down_fail_hint">加载失败，请重试</string>
    <string name="history_delete_cancel">撤销</string>
    <string name="history_scale_cancel">取消</string>
    <string name="history_complete">完成</string>
    <string name="history_edit">编辑</string>
    <string name="history_title_name">小视频</string>
    <string name="history_7_day_hint">最近7天拍摄的小视频</string>
    <string name="feinno_sure">确定</string>

    <string name="swiper_awesome_layout_1">My awesome layout 1</string>
    <string name="swiper_awesome_layout_2">My awesome layout 2</string>
    <string name="swiper_awesome_layout_3">My awesome layout 3</string>
    <string name="swiper_awesome_layout_4">My awesome layout 4</string>

    <string name="function_swiper_list">ListView</string>
    <string name="function_swiper_grid">GridView</string>
    <string name="function_swiper_recycler">RecyclerView</string>

    <string name="down_progress">%1$d%%</string>
    <string name="downing">正在下载</string>
    <string name="down_wait">等待下载</string>

    <string name="title_activity_video_play">VideoPlayActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_video_playtwo">VideoPlaytwoActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="video_arrive_max">保存的小视频达到上限，\n无法拍摄并保存。</string>
    <string name="publish_video_hint">小视频</string>
    <string name="video_file_no_exists">该视频不存在，发送失败</string>
    <string name="publish_save_video">临时保存小视频</string>
    <string name="publish_cancel_save_video">取消</string>
    <string name="fingers_not_release">手指不要放开</string>
    <string name="release_cancel">松开取消</string>
    <string name="up_cancel">上移取消</string>
    <string name="double_click_large">双击放大</string>
    <string name="hold_down_record">按住拍</string>
    <string name="im_video_max_num">历史记录超过限制，只能拍摄发送、无法保存。</string>
    <string name="cancel">"取消"</string>
</resources>
