<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gjs.developresponsity.MainActivity">

    <com.chauthai.swipereveallayout.SwipeRevealLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        app:dragEdge="right"
        app:mode="same_level">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:text="@string/app_name" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="functionswiper">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:text="@string/function_swiper" />
        </FrameLayout>
    </com.chauthai.swipereveallayout.SwipeRevealLayout>

    <com.chauthai.swipereveallayout.SwipeRevealLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        app:dragEdge="right"
        app:mode="same_level">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:text="@string/app_name" />
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="imagetool">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:text="@string/function_image_tool" />
        </FrameLayout>
    </com.chauthai.swipereveallayout.SwipeRevealLayout>

    <com.chauthai.swipereveallayout.SwipeRevealLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        app:dragEdge="right"
        app:mode="same_level">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:text="@string/app_name" />
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="audiotool">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:text="@string/function_audio_tool" />
        </FrameLayout>
    </com.chauthai.swipereveallayout.SwipeRevealLayout>

    <com.chauthai.swipereveallayout.SwipeRevealLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        app:dragEdge="right"
        app:mode="same_level">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:text="@string/app_name" />
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="greendaotool">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:text="@string/function_greendao_tool" />
        </FrameLayout>
    </com.chauthai.swipereveallayout.SwipeRevealLayout>
</LinearLayout>
