<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.gjs.developresponsity.view.SwiperRevealLayoutActivity">

    <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="?attr/actionBarSize"-->
        <!--app:popupTheme="@style/AppTheme.PopupOverlay"-->
        <!--app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
        <!--app:titleTextColor="@android:color/white"/>-->

    <com.chauthai.swipereveallayout.SwipeRevealLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        app:dragEdge="right"
        app:mode="normal">

        <LinearLayout
            android:id="@+id/swiper_button_del"
            android:layout_width="100dp"
            android:orientation="horizontal"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/darker_gray"
                android:gravity="center"
                android:onClick="more"
                android:textColor="@color/white"
                android:text="@string/more" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:onClick="deleteone"
                android:textColor="@color/white"
                android:text="@string/delete" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_solid_white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="layoutone"
                android:text="@string/swiper_awesome_layout_1" />
        </FrameLayout>
    </com.chauthai.swipereveallayout.SwipeRevealLayout>
    <com.chauthai.swipereveallayout.SwipeRevealLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        app:dragEdge="left"
        app:mode="same_level">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:onClick="deletetwo"
                android:text="@string/delete" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_solid_white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="layouttwo"
                android:text="@string/swiper_awesome_layout_2" />
        </FrameLayout>
    </com.chauthai.swipereveallayout.SwipeRevealLayout>
    <com.chauthai.swipereveallayout.SwipeRevealLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        app:dragEdge="bottom"
        app:mode="same_level">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:onClick="deletethree"
                android:src="@mipmap/ic_search" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_solid_white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="layoutthree"
                android:text="@string/swiper_awesome_layout_3" />
        </FrameLayout>
    </com.chauthai.swipereveallayout.SwipeRevealLayout>
    <com.chauthai.swipereveallayout.SwipeRevealLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        app:dragEdge="top"
        app:mode="same_level">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:onClick="deletefour"
                android:src="@mipmap/ic_star" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_solid_white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="layoutfour"
                android:text="@string/swiper_awesome_layout_4" />
        </FrameLayout>
    </com.chauthai.swipereveallayout.SwipeRevealLayout>
</LinearLayout>
