<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/history_title_height"
        android:background="@color/content_gray"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="7">

        <RelativeLayout
            android:id="@+id/history_back_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/history_margin">

            <ImageView
                android:id="@+id/history_back_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow_back" />

            <TextView
                android:id="@+id/history_delete_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/history_delete_cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_15" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/history_title_name"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingRight="@dimen/history_margin">

            <TextView
                android:id="@+id/history_complete_or_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/history_edit"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_15" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/video_history_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <com.example.testavsdk.tools.GridViewWithHeaderAndFooter
            android:id="@+id/video_history_gv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@null"
            android:gravity="center"
            android:horizontalSpacing="5dp"
            android:listSelector="@android:color/transparent"
            android:numColumns="3"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5dp" />

        <!--剩余的布局-->
        <LinearLayout
            android:id="@+id/history_left_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--用来做点击事件-->
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
